--- a/VeloTours/Views/Home/Index.cshtml
+++ b/VeloTours/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                     <tr>
                         <td>
                             @Html.ActionLink("Henrik N.", "Index", "Country", routeValues: new { athlete = 352657 }, htmlAttributes: null )
-                            @Html.Raw(HtmlFormatters.AthleteIconLink(352657))
+                            @Html.Raw(HtmlVeloHelpers.AthleteIconLink(352657))
                         </td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
