--- a/VeloTours/Views/Ride/LeaderboardPart.cshtml
+++ b/VeloTours/Views/Ride/LeaderboardPart.cshtml
@@ -49,10 +49,10 @@
         @foreach (LeaderBoard lb in leaderBoardList) {
         <tr>
             <td class="right">@lb.Rank</td>
-            @*<td class="top">@HtmlVeloHelpers.AthleteNameLink(lb.Athlete)</td>*@
             <td class="top">
                 @Html.ActionLink(lb.Athlete.Name, "Index", new { athlete = 352657 } )
-                @HtmlVeloHelpers.AthleteIconLink(lb.Athlete)</td>
+                @HtmlVeloHelpers.AthleteIconLink(lb.Athlete)
+            </td>
             <td class="right">@lb.Yellow</td>
             <td class="right">@lb.GreenPoints</td>
             <td class="right">@lb.PolkaDotPoints</td>
