--- a/VeloTours/Views/Area/Index.cshtml
+++ b/VeloTours/Views/Area/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VeloTours.Models.SegmentAreaViewModel
+﻿@model VeloTours.ViewModels.SegmentAreaViewModel
 @using VeloTours.Models;
 @using VeloTours.Helpers;
 
