--- a/VeloTours/Views/Area/YerseyPart.cshtml
+++ b/VeloTours/Views/Area/YerseyPart.cshtml
@@ -1,5 +1,4 @@
-﻿@model VeloTours.Models.SegmentAreaViewModel
-@using VeloTours.Models;
+﻿@model VeloTours.ViewModels.SegmentAreaViewModel
 @using VeloTours.Helpers;
 
 @{
