--- a/VeloTours/Views/Segment/YerseyPart.cshtml
+++ b/VeloTours/Views/Segment/YerseyPart.cshtml
@@ -1,4 +1,4 @@
-﻿@model VeloTours.Models.SegmentViewModel
+﻿@model VeloTours.ViewModels.SegmentViewModel
 @using VeloTours.Models;
 @using VeloTours.Helpers;
 
@@ -30,7 +30,7 @@
                     <img src="~/Content/images/yersey/green.png" />
                 }
             </td>
-            <td class="top">
+            <td class="t">
                 @DisplayAthlete(yellow)                
             </td>
         </tr>
