Fixed errors in ref.

--- a/VeloTours/Views/Segment/AthleteInfoPart.cshtml
+++ b/VeloTours/Views/Segment/AthleteInfoPart.cshtml
@@ -1,4 +1,5 @@
 ﻿@using VeloTours.Models;
+@using VeloTours.ViewModels;
 @{
     Statistics info = @Model.Info;
     AthleteRideInfo athleteInfo = @Model.Athlete;
