--- a/VeloTours/Views/Area/SegmentsPart.cshtml
+++ b/VeloTours/Views/Area/SegmentsPart.cshtml
@@ -20,6 +20,8 @@
             <th class="r" title="Total number of riders that have completed this segment">riders</th>
             <th class="r" title="Total number the segments has been ridden">ridden</th>
             <th class="r" title="Speed on segment, ridden by KOM">KOM<br />km/h</th>
+            <th class="r">green</th>
+            <th class="r">polka<br />-dot</th>
             <th class="r" title="Your time on the segment">time</th>
             <th class="r" title="The time your personal best is currently behind the current KOM.">behind<br />KOM s.</th>
             <th class="r" title="Percentage of time your personal best is currently behind the current KOM.">behind<br />KOM %</th>
@@ -45,6 +47,8 @@
                 <td class="r">@item.Info.NoRiders</td>
                 <td class="r">@item.Info.NoRidden</td>
                 <td class="r">@item.KomSpeedString</td>
+                <td class="r">@item.Athlete.Green</td>
+                <td class="r">@item.Athlete.PolkaDot</td>
                 <td class="r">@item.Athlete.Min</td>
                 <td class="r">@item.Athlete.BehindKom</td>
                 <td class="r">@item.Athlete.BehindKomPercentageF</td>
