Major refactoring. Inheritance

--- a/VeloTours/Views/Area/Index.cshtml
+++ b/VeloTours/Views/Area/Index.cshtml
@@ -10,8 +10,7 @@
 }
 
 <h2>@Model.Info.Name</h2>
-<p>@Model.SegmentArea.Info.Description</p>
-@*PictureUrl*@
+<p>@Model.Info.Description</p>
 
 @if (hasLeaderBoard) 
 {
