--- a/VeloTours/Views/Area/Index.cshtml
+++ b/VeloTours/Views/Area/Index.cshtml
@@ -15,7 +15,7 @@
 @if (hasLeaderBoard) 
 {
     <h3>Yersey</h3>
-    @RenderPage("~/Views/Area/YerseyPart.cshtml", @Model)
+    @RenderPage("~/Views/Ride/YerseyPart.cshtml", @Model)
 }
 
 <h3>Segments in the areas</h3>
@@ -32,13 +32,11 @@
 }
     
 <p>
-    Go back to area: 
-    @Html.ActionLink(@Model.SegmentArea.Region.Info.Name, "Index", "Region", routeValues: new { region = @Model.SegmentArea.RegionID, athlete = athleteID }, htmlAttributes: null)
+    Up to: @Html.ActionLink(@Model.SegmentArea.Region.Info.Name, "Index", "Region", routeValues: new { region = @Model.SegmentArea.RegionID, athlete = athleteID }, htmlAttributes: null)
 </p>
 
 <h3>Admin</h3>
-@Html.ActionLink("Update from Strava", "Update", routeValues: new { athlete = athleteID, area = areaID, effort = false })<br />
-@Html.ActionLink("Update from Strava w/efforts", "Update", routeValues: new { athlete = athleteID, area = areaID, effort = true, }, htmlAttributes: null)<br />
+@Html.ActionLink("Update from Strava", "Update", routeValues: new { athlete = athleteID, area = areaID})
 
 
 <script>
