--- a/VeloTours/Views/Region/Index.cshtml
+++ b/VeloTours/Views/Region/Index.cshtml
@@ -15,11 +15,11 @@
 @if (hasLeaderBoard) 
 {
     <h3>Yersey</h3>
-    @RenderPage("~/Views/Area/YerseyPart.cshtml", @Model)
+    @RenderPage("~/Views/Ride/YerseyPart.cshtml", @Model)
 }
 
 <h3>Segments in the areas</h3>
-@RenderPage("~/Views/Area/SegmentsPart.cshtml", @Model)
+@RenderPage("~/Views/Region/AreasPart.cshtml", @Model)
 
 @if (hasLeaderBoard) 
 {
@@ -27,3 +27,6 @@
     @RenderPage("~/Views/Ride/LeaderboardPart.cshtml", @Model)
 }
   
+<p>
+    Up to: @Html.ActionLink(@Model.Region.Country.Name, "Index", "Region", routeValues: new { country = @Model.Region.CountryID, athlete = athleteID }, htmlAttributes: null)
+</p>
